[package]
name = "redman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
either = "1.15.0"
html-escape = "0.2.13"
htmlentity = "1.3.2"
itertools = "0.14.0"
openssl = { version = "0.10.73", features = ["vendored"] }
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
tabled = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
